[package]
authors = ["Derrick van Zyl <derrick.vanzyl@gmail.com>"]
edition = "2018"
name = "rust-graphql-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
itconfig = {version = "1.1.1", features = ["macro"]}
juniper = "0.15.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
